--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <section id="scene3d">
+      <canvas id="canvas"></canvas>
+    </section>
+
     <!-- Global particles background (3D) -->
     <div id="particles-layer" aria-hidden="true"></div>
 
